--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>若依V3</title>
-    [if lt IE 11]><script>window.location.href='./public/ie.html';</script>![endif]
+    <!-- [if lt IE 11]><script>window.location.href='./public/ie.html';</script>![endif] -->
   <style>
     html,
     body {
@@ -16,8 +16,8 @@
     }
 
     #loading-wrapper {
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       background-color: #080915;
 
     }
